--- a/config/config.yml
+++ b/config/config.yml
@@ -17,12 +17,15 @@ framework:
     #serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
+    assets:
+        base_path: %base_url_path%
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
+        cookie_path: %base_url_path%
     fragments:       ~
     http_method_override: true
 
