--- a/config/links.yml
+++ b/config/links.yml
@@ -1,7 +1,9 @@
 #genome:    # you can give any name, it is not used by the script
-#    db:                     '.+genome.+'    # optional regex to restrict to a specific blast database
-#    '(scaffold\w+)':         '<a href="http://tripal/{id}">{id}</a> <a href="http://jbrowse?loc={id}">JBrowse</a>'    # key is a regex to match seq ids, value is a full html block, or simply an http url
+#    db:                     '\w+genome\w+'    # optional regex to restrict to a specific blast database
+#    '(scaffold\w+)':         '<a href="http://tripal/{id}"></a> <a href="http://jbrowse?loc={id}">JBrowse</a>'    # key is a regex to match seq ids, value is a full html block, or simply an http url
 #    '(superscaffold\w+)':    'http://tripal/{id}'
+#    '(hyperscaffold\w+)':    'http://jbrowse?loc={id}{jbrowse_track}' # {jbrowse_track} will be replaced by proper argument to add a custom jbrowse track based on the gff_url
+#    '(hyperscaffold\w+)':    'http://google/{gff_url}' # {gff_url} will be replaced by the url of the gff output
 #protein:
 #    db:                     '.+protein.+'
 #    '*':                    'http://tripal/{id}'
