--- a/config/config.yml
+++ b/config/config.yml
@@ -43,9 +43,9 @@ assetic:
     filters:
         cssrewrite: ~
         uglifycss:
-            bin: /usr/local/bin/uglifycss
+            bin: /usr/bin/uglifycss
         uglifyjs2:
-            bin: /usr/local/bin/uglifyjs
+            bin: /usr/bin/uglifyjs
 
 # Doctrine Configuration
 doctrine:
